# piboy-zero

./: .gitignore  .gitmodules  COPYING  README.md  notes.org
baseboard.kicad/: fp-lib-table  piggrl_zero_baseboard-cache.lib  piggrl_zero_baseboard.kicad_pcb  piggrl_zero_baseboard.kicad_pcb-bak  piggrl_zero_baseboard.pro  piggrl_zero_baseboard.sch  rasp_audio.sch  raspberry_pins.lib  raspberry_zero_bitmap_trace.kicad_mod  soft_power.sch
baseboard.kicad/components.pretty/: 1x3_smd_pinheader.kicad_mod  Logo.kicad_mod  Powerboost500c.kicad_mod  TM022HDH26.kicad_mod  audio_jack.kicad_mod  audio_smd_SJ-3523-SMT-TR.kicad_mod  raspberry-zero.kicad_mod
baseboard.kicad/switches.pretty/: Omron_D2FS_FTN.kicad_mod  Omron_D2FS_FTN_mirror.kicad_mod  Omron_D2LS_21.kicad_mod  Omron_D2LS_21_woKeyHoles.kicad_mod  SKRHAAE010.kicad_mod  btn_1571262-1.kicad_mod  smd_push_button.kicad_mod  solder-pad_6.kicad_mod  solder-pad_6_back.kicad_mod
enclosure/: button_ABXY.stl  button_dpad.stl  button_power.stl  button_shoulder.stl  button_start_select.stl  case_bot.stl  case_top.stl  instructions.txt
misc/: rendering_front_exploded_logo-ed.xcf
misc/kicad_generated_2016-02-13/: errors.txt
misc/kicad_generated_2016-03-13/: errors.txt  soldering_groups.xcf
scripts/: compare_pcbnew_printout.sh
software/: README.md  Source.txt  setup_retropie.sh
software/Adafruit-Retrogame/: 10-retrogame.rules  Makefile  retrogame.c  retrogame.init.d
software/backlight_software-pwm_pi-blaster/: pi-blaster.c  (+1 more)
software/rpi-fbcp/: CMakeLists.txt  fbcp.init.d  fbcp.service
source_schematics/: source.txt
(+60 files in other folders)
